rendering content from prodweek table, added a function to include a year subheader

--- a/frontend/src/components/weeks/weeks.css
+++ b/frontend/src/components/weeks/weeks.css
@@ -1,18 +1,34 @@
 /* Weeks.css */
 .list-unstyled {
     list-style: none;
+    padding: 0; /* Remove any padding from the ul */
   }
   
-li {
+  .Weeks > div {
+    margin-bottom: 20px; /* Add some spacing between year sections */
+  }
+  
+  /* Apply the same styles to 'a' tags as you did for 'li' elements */
+  a {
+    display: inline-block; /* Make 'a' tags block elements */
     margin-bottom: 10px;
-    /* Add default styles for li elements */
     color: black; /* Default text color */
     transition: color 0.2s, text-decoration 0.2s; /* Smooth transition */
-    list-style: none;
-}
-
-li:hover {
-    /* Add styles for li elements on hover */
+    text-decoration: none; /* Remove default underline from links */
+  
+    /* Styling for the dates */
+    border: 1px solid #ccc; /* Add a border */
+    padding: 4px 8px; /* Add some spacing around the text (top and bottom: 4px, left and right: 8px) */
+    font-weight: bold; /* Make the text bold */
+    max-width: 150px;
+  }
+  
+  a:hover {
+    /* Add styles for 'a' tags on hover */
     color: blue; /* Blue text color on hover */
     text-decoration: underline; /* Underline text on hover */
-}
+  }
+ 
+  li{
+    list-style: none;
+  }
