--- a/frontend/src/components/weeks/weeks.css
+++ b/frontend/src/components/weeks/weeks.css
@@ -9,15 +9,17 @@
   }
   
   /* Apply the same styles to 'a' tags as you did for 'li' elements */
-  a {
+  .week-list a{
     display: inline-block; /* Make 'a' tags block elements */
     margin-bottom: 10px;
     color: black; /* Default text color */
+    background-color: white;
     transition: color 0.2s, text-decoration 0.2s; /* Smooth transition */
     text-decoration: none; /* Remove default underline from links */
   
     /* Styling for the dates */
     border: 1px solid #ccc; /* Add a border */
+    border-radius: 3px;
     padding: 4px 8px; /* Add some spacing around the text (top and bottom: 4px, left and right: 8px) */
     font-weight: bold; /* Make the text bold */
     max-width: 150px;
@@ -31,4 +33,15 @@
  
   li{
     list-style: none;
+  }
+
+  .Weeks{
+    padding-left: 10px;
+  }
+
+  .year-subheader{
+    background-color: rgb(167, 167, 167);
+    max-width: 90%;
+    padding-left: 5px;
+    border-radius: 3px;
   }
