--- a/frontend/src/components/processingPlan/processingPlan.css
+++ b/frontend/src/components/processingPlan/processingPlan.css
@@ -33,14 +33,30 @@
 .sku-name-list{
     display: flex;
     flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
 }
 
-.sku-name{
-    border: 1px solid;
+.sku-name {
+    width: 120px;
+    height: 120px;
+    padding: 3px;
+    margin: 5px 3px 3px 3px;
+    border: solid 1px;
     border-radius: 5px;
-    margin: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
+    box-sizing: border-box;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .background-white {
+    background-color: white;
+  }
+  
+  .background-gray {
+    background-color: #ccc;
+  }
+  
